--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Factorship - Industrial Category Bootstrap Responsive Template | Home</title>
+    <title>Specialized Bicycle Accessories Manufacturer: Fenders, Mirrors, & Computer Mounts</title>
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,600&display=swap" rel="stylesheet">
     <!-- Template CSS -->
